# ot

./: .gitignore  OpenTheory.cabal  b2n.hs  eqMp.hs  n2b.hs  numconv.hs
OpenTheory/: Bool.hs  Conv.hs  Equality.hs  Name.hs  Natural.hs  Object.hs  Proof.hs  Read.hs  Rule.hs  Term.hs  Type.hs  Write.hs
OpenTheory/Natural/: Numeral.hs
